# DeepTabular

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr-tests.yml  semantic-release.yml  sync-develop.yml
deeptab/: __version__.py
deeptab/arch_utils/: enode_utils.py  get_norm_fn.py  rnn_utils.py
deeptab/arch_utils/layer_utils/: normalization_layers.py  sn_linear.py
deeptab/arch_utils/mamba_utils/: init_weights.py  mamba_arch.py  mamba_original.py  mambattn_arch.py
deeptab/base_models/: mambattn.py  tabr.py  tabularnn.py
deeptab/configs/: __init__.py  mambattention_config.py  tabr_config.py  tabularnn_config.py
deeptab/data_utils/: dataset.py
deeptab/models/: autoint.py  enode.py  fttransformer.py  mambattention.py  mambular.py  mlp.py  modern_nca.py  node.py  resnet.py  saint.py  tabm.py  tabr.py  tabtransformer.py  tabularnn.py  tangos.py  trompt.py
deeptab/utils/: config_mapper.py  distributions.py
deeptabular/: __version__.py
deeptabular/arch_utils/: enode_utils.py
deeptabular/models/: autoint.py  enode.py  fttransformer.py  mambattention.py  mambular.py  mlp.py  modern_nca.py  node.py  resnet.py  saint.py  tabm.py  tabr.py  tabtransformer.py  tabularnn.py  tangos.py  trompt.py
docs/: conf.py  contributing.md  homepage.md  installation.md  release.md
docs/api/base_models/: BaseModels.rst
docs/api/configs/: index.rst
docs/api/data_utils/: Datautils.rst  index.rst
docs/examples/: classification.md  distributional.rst  regression.rst
examples/: example_classification.py  example_distributional.py  example_regression.py
mambular/data_utils/: dataset.py
templates/: CHANGELOG.md.j2
tests/: test_base.py  test_configs.py
