[tool.poetry]
name = "deeptab"

version = "1.6.1"


description = "A python package for tabular deep learning."
authors = ["Anton Thielmann", "Manish Kumar", "Christoph Weisser"]
readme = "README.md"
packages = [{ include = "deeptab" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.0"
pandas = "^2.0.3"
lightning = "^2.3.3"
scikit-learn = "^1.3.2"
torch = ">=2.2.2,<=2.7.0"
torchmetrics = "^1.5.2"
setuptools = "^75.3.0"
properscoring = "^0.1"
scikit-optimize = "^0.10.2"
einops = "^0.8.0"
accelerate = "^1.2.1"
scipy = "^1.15.0"
pretab = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^4.1"
ruff = ">=0.3"
pre-commit = "^3.6"
docformatter = "^1.4"
commitizen = "^3.29.1"
python-semantic-release = "^9.12.0"


[tool.poetry.urls]
homepage = "https://github.com/OpenTabular/deeptab"
documentation = "https://deeptab.readthedocs.io/"
repository = "https://github.com/OpenTabular/deeptab"
package = "https://pypi.org/project/deeptab/"


# code quality tools
[tool.pyright]
ignore = []
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"

# Configure code linting
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*.ipynb", "deeptab/arch_utils/mamba_utils.mamba_orginal.py"]

[tool.ruff.lint]
select = [
  "A",   # flake8-buildins
  "B",   # flake8-bugbear
  "C4",
  "E",   # pycodestyle - errors
  "F",   # pyflakes
  "I",   # isort
  "RUF", # ruff specific rules
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle - warnings
]

ignore = [
  "B006",
  "F401", # Ignore unused imports
  "F841", # Ignore unused local variables
  "E501", # Ignore line length
  "D100", # Missing module-level docstring
  "D101", # Missing class-level docstring
  "D102", # Missing method-level docstring
  "D103", # Missing function-level docstring
  "B007",
  "S307",
]


[tool.ruff.lint.per-file-ignores]
# allow asserts in test files (bandit)
"test_*" = ["S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.docformatter]
recursive = true
in-place = true
wrap-summaries = 120
wrap-descriptions = 120
exclude = ["build", "dist", ".venv", ".git"]

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.6.1"
version_files = ["pyproject.toml:version", "deeptab/__version__.py"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = false

# Python Semantic Release configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["deeptab/__version__.py:__version__"]
build_command = "poetry build"
branch = "master"
upload_to_pypi = true
upload_to_release = true
commit_parser = "angular"

[tool.semantic_release.branches.master]
match = "(master|main)"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[[tool.semantic_release.publish.repositories]]
name = "pypi"
url = "https://upload.pypi.org/legacy/"
token_var = "PYPI_TOKEN"
